# VDI-Toolkit

./: .clang-format  .gitattributes  .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: scorecard.yml
backup/: README.md  autogui.py  chrome.py  edge.py  kvm.sh  kvmz.sh  notepad.py  run.bat  vlc.py  vscode.py  word.py
dgpu/mediasample/: MediaSample-build.bat  MediaSample.sln  README.md  mediasample_readme.txt
dgpu/mediasample/MediaSample/: MediaSample.vcxproj  MediaSample.vcxproj.filters  buffer.cpp  buffer.h  config.cpp  config.h  mediasample.cpp  mediasample.hpp  output.h264
dgpu/mediasample/MediaSample/config/: config264.json  config265.json
dgpu/scripts/: 1_vf_setup_by_xpum.sh  3_start_VMs.sh  4_vm_port_forward.sh  5_shutdown_VMs.sh  Readme.txt  fix-ocl-drop.sh
dgpu/scripts/Host/: 0_clone_vm_instance.sh  1_vf_setup_by_xpum.sh  2_assign_vGPU_to_VMs.sh  3_start_VMs.sh  4_vm_port_forward.sh  5_shutdown_VMs.sh  6_VM-vgpu-unplug.sh  README.md  Readme.txt  VM_scripts.md
dgpu/scripts/Host/7_dump_debug_info/: 7_dump_debug_info.sh  intel_gpu_top
dgpu/scripts/Windows_Guest/: ManualInstall.bat  README.md  Readme.txt  SilentInstall.bat  install-Flex140.ps1  install-Flex170.ps1
doc/: BALLOON_README.md  BINDVCPU_README.md  CREATEVM_README.md  VMMONITOR_README.md  VMTESTRUN_README.md
modules/Examples/: README.md
modules/Examples/MDSCMRDASample/: README.md
modules/Examples/MDSCMRDASample/scripts/: CMakeLists.txt  WinBuild.bat
modules/Examples/MDSCMRDASample/src/: EncodeManager.cpp  EncodeManager.h  JsonConfig.h  MDSCMRDASample.conf  MDSCMRDASample.cpp  MRDAEncodeManager.cpp  MRDAEncodeManager.h  QESEncodeManager.cpp  QESEncodeManager.h  sample_capture_encode.cpp
modules/Examples/SampleDecodeApp/: README.md
modules/Examples/SampleDecodeApp/scripts/: CMakeLists.txt  WinBuild.bat  prebuild.md
modules/Examples/SampleDecodeApp/src/: sample_decode.cpp  sample_decode_sw.cpp
modules/Examples/SampleEncodeApp/: README.md
modules/Examples/SampleEncodeApp/scripts/: CMakeLists.txt
modules/Examples/SampleEncodeApp/src/: sample_encode.cpp
modules/MediaResourceDirectAccess/: APIDoc.md  README.md
modules/MediaResourceDirectAccess/API/: MediaResourceDirectAccessAPI.h  MediaResourceDirectAccessAPI_Impl.cpp
modules/MediaResourceDirectAccess/HostService/: HostEncodeService.h  HostService.cpp  HostService.h  HostServiceFactory.h  HostServiceSession.cpp  HostServiceSession.h  HostVPLEncodeService.cpp  HostVPLEncodeService.h  ResourceManager.cpp  ResourceManager.h  SessionManager.cpp  SessionManager.h  UtilVPL.h
modules/MediaResourceDirectAccess/HostService/DecodeService/: HostDecodeService.cpp  HostDecodeService.h
modules/MediaResourceDirectAccess/HostService/EncodeService/: HostEncodeService.cpp  HostEncodeService.h
modules/MediaResourceDirectAccess/SHMemory/: FrameBufferData.h  FrameMemoryPool.cpp  FrameMemoryPool.h  Ivshmem.cpp  Ivshmem.h  Public.h
modules/MediaResourceDirectAccess/SampleEncodeApp/: sample_encode.cpp
modules/MediaResourceDirectAccess/Scripts/Linux/: CMakeLists.txt  install_host.sh
modules/MediaResourceDirectAccess/Scripts/Windows/SampleEncode/: CMakeLists.txt  WinBuild.bat
modules/MediaResourceDirectAccess/Scripts/trace/: README.md  mrda_single_decoding_latency_profile.sh  mrda_single_encoding_latency_profile.sh
modules/MediaResourceDirectAccess/WinGuest/: DataReceiver.cpp  DataReceiver.h  DataSender.cpp  DataSender.h  EncodeTask.cpp  EncodeTask.h  MediaTask.cpp  MediaTask.h  TaskDataSession.h  TaskDataSession_gRPC.cpp  TaskDataSession_gRPC.h  TaskManager.cpp  TaskManager.h  TaskManagerSession.h  TaskManagerSession_gRPC.cpp  TaskManagerSession_gRPC.h
modules/MediaResourceDirectAccess/protos/: MRDAService.proto  MRDAServiceManager.proto
modules/MediaResourceDirectAccess/sample_app/: sample_encode.cpp
modules/MediaResourceDirectAccess/utils/: common.h  error_code.h  ns_def.h
modules/multidispscreencap/: MDSC-build.bat  MultiDisplayScreenCapture.sln  README.md
modules/multidispscreencap/MDSCSample/: EncodeManager.cpp  EncodeManager.h  JsonConfig.h  MDSCSample.conf  MDSCSample.cpp  MDSCSample.vcxproj  MDSCSample.vcxproj.filters  ffplay_streams.bat  start_rtsp_client.bat  start_rtsp_server.bat
modules/multidispscreencap/MultiDisplayScreenCapture/: BufferQueue.cpp  BufferQueue.h  CaptureManager.cpp  CaptureManager.h  CommonTypes.h  DuplicationManager.cpp  DuplicationManager.h  MDSCTypes.h  MultiDisplayScreenCapture.cpp  MultiDisplayScreenCapture.h  MultiDisplayScreenCapture.vcxproj  MultiDisplayScreenCapture.vcxproj.filters  ScreenCapture.cpp  ScreenCapture.h  ScreenManager.cpp  ScreenManager.h  ThreadManager.cpp  ThreadManager.h  framework.h
modules/shmem/: README.md
modules/shmem/guestVMs/: README.md  ShmemGuestBuild.bat
modules/shmem/guestVMs/Console/: Connect.cpp  Tools.h  Vioserial.cpp  Vioserial.h  vioser_win.sln  vioser_win.vcxproj  vioser_win.vcxproj.filters
modules/shmem/guestVMs/Ivshmem-applications/: ivshmem-applications.sln  ivshmem-applications.vcxproj  ivshmem-applications.vcxproj.filters
modules/shmem/host/: README.md
modules/shmem/host/console/: CMakeLists.txt  Connect.cpp  Connect.h  enconfig.txt  vmconfig.txt
modules/spice-plugins/: README.md
modules/spice-plugins/scripts/: 0_install_platform.sh  1_install_gstreamer.sh  2_install_spice.sh  3_test_spice_gst.sh  4_setup_vm_spice_stream.sh
testscript/: BALLOON_README.md  CREATEVM_README.md  VMTESTRUN_README.md  createvm.sh  edge.xml  findip.sh  notepad.xml  vlc.xml  vmtestrun.py  winapptest.py  wps.xml
utils/: 0001-Added-auto-mouse-move-to-avoid-stop-connection.patch  0001-Fix-RDP-memory-leak-issue.patch  0002-Add-username-and-password-support-for-capture-rdp.patch  0002-Fix-RDP-memory-leak-issue.patch  README.md  VMMonitor.py  balloon.sh  bindvcpu.py  cpubind.xml  createvm-dpdk.sh  createvm-sriov.sh  createvm.sh  disconrdp.rox  fileupload.rox  findip.sh  showtestpattern.rox  taskmgr.rox  vmmonitor.config  vmtestrun.py  winapptest.py
vm/: README.md  autorun.bat  disable-error-report.reg  iperf.xml  notepad.xml  startapp.bat
(+36 files in other folders)
